--- a/src/pages/en/index.astro
+++ b/src/pages/en/index.astro
@@ -5,7 +5,7 @@ import type { Locale } from '../../i18n/translations';
 import { getRelativeLocaleUrl } from 'astro:i18n';
 import { getTranslations } from '../../i18n/utils';
 
-const currentLocale = (Astro.currentLocale as Locale) || 'ar';
+const currentLocale = (Astro.currentLocale as Locale) || 'en';
 const arHomepageUrl = getRelativeLocaleUrl('ar', '');
 const enHomepageUrl = getRelativeLocaleUrl('en', '');
 const t = getTranslations(currentLocale);
@@ -13,6 +13,7 @@ const t = getTranslations(currentLocale);
 
 <Layout>
   <HomePage
+    client:load
     locale={currentLocale}
     arabicUrl={arHomepageUrl}
     englishUrl={enHomepageUrl}
