--- a/src/pages/history.astro
+++ b/src/pages/history.astro
@@ -28,5 +28,5 @@ const t = getTranslations(currentLocale);
       rel="stylesheet"
     />
   </head>
-  <SeerahJourney client:only="react" t={t} />
+  <SeerahJourney client:load t={t} locale={currentLocale} />
 </Layout>
