--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,6 +16,7 @@ const t = getTranslations(currentLocale);
 
 <Layout>
   <HomePage
+    client:load
     locale={currentLocale}
     arabicUrl={arHomepageUrl}
     englishUrl={enHomepageUrl}
