--- a/src/pages/seera.astro
+++ b/src/pages/seera.astro
@@ -1,6 +1,6 @@
 ---
 import Layout from '../layouts/Layout.astro';
-import SeerahJourney from '../components/SeerahJourney.tsx';
+import SeerahJourney from '../components/SeerahJourney.astro';
 import type { Locale } from '../i18n/translations';
 import { getTranslations } from '../i18n/utils';
 
@@ -12,5 +12,5 @@ const t = getTranslations(currentLocale);
 ---
 
 <Layout>
-  <SeerahJourney client:load t={t} locale={currentLocale} />
+  <SeerahJourney t={t} locale={currentLocale} />
 </Layout>
