Add timelineTitle prop to SeerahInteractivity and Timeline components; update translations

--- a/src/components/SeerahJourney.astro
+++ b/src/components/SeerahJourney.astro
@@ -47,6 +47,7 @@ const initialEvent = sortedEvents[0] || null;
       client:visible 
       sortedEvents={sortedEvents} 
       initialEventId={initialEvent?.id || null}
+      timelineTitle={t.timelineTitle}
     />
   </main>
 
